2008-04-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/disp_holder.cpp:
	* qt4/log_player.cpp:
	* qt4/main_window.cpp:
	* qt4/monitor_client.cpp:
	* rcsslogplayer/util.cpp:
	* rcsslogplayer/util.h:
	- implemented simple monitor client. Not completed yet.

	* qt4/image_save_dialog.cpp:
	* qt4/image_save_dialog.h:
	* qt4/Makefile.am:
	* qt4/field_canvas.cpp:
	* qt4/main_window.cpp:
	- added some monitor client related code, but not available yet.
	- added an action to print available shortcut keys.

	* qt4/main_window.h:
	* qt4/options.cpp:
	* qt4/qt4.pro:
	- implemented an image save dialog.

	* classic/logplayer.cpp:
	* qt4/Makefile.am:
	* tool/rcg3to4.cpp:
	* tool/rcg4to3.cpp:
	* tool/rcgsplit.cpp:
	- fixed include dependency.

	* qt4/qt4.pro:
	* classic/Makefile.am:
	* classic/logplayer.cpp:
	* configure.ac:
	* qt4/Makefile.am:
	* qt4/team_graphic_painter.cpp:
	* rcsslogplayer/rcsslogplayer.pro:
	* rcsslogplayer/util.cpp:
	- fixed build problem on Mac OS X, but cannot be build by
	Makefile generated by configure. instead of them, use qmake.

2008-04-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	- fixed an incorrect handler assignment.

	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/parser.h:
	- fixed bugs in v4 parser.
	- added safe mode option

	* qt4/log_slider_tool_bar.cpp:
	- restricted press event to the left button.

	* qt4/detail_dialog.cpp:
	* qt4/detail_dialog.h:
	* qt4/player_type_dialog.cpp:
	* qt4/player_type_dialog.h:
	- implemented a transparent dialog using wheel event.

	* classic/logplayer.cpp:
	* classic/logplayer.h:
	* classic/nowindow.cpp:
	* qt4/main_data.cpp:
	* rcsslogplayer/rcsslogplayer.pro:
	* tool/Makefile.am:
	- fixed compliser warning.
	- added profiling code.

	* classic/Makefile.am:
	* icons/rcss.ico:
	* rcsslogplayer.pro:
	* rcsslogplayer/rcsslogplayer.pro:
	* qt4/disp_holder.cpp:
	* qt4/main.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/player_painter.cpp:
	* qt4/rcsslogplayer.rc: